tests/NormalTests/paczka1/fuzzy1/47540553.err
Error in line 4: S288 A696 74,6
Error in line 1: L20YZM S508 25,6
Error in line 6: 9qnz A957 8,8
Error in line 10: 9qnz S288 75,9
Error in line 12: 9qnz A957 63,9
Error in line 16: WbQGKn S508 46,9
